chore: complete v1.1 milestone
Archived:
- milestones/v1.1-ROADMAP.md (9 phases, 48 plans)
- milestones/v1.1-REQUIREMENTS.md (57 requirements all satisfied)
- milestones/v1.1-MILESTONE-AUDIT.md (audit passed 100%)

Deleted (fresh for next milestone):
- REQUIREMENTS.md (fresh one created for next milestone)
- v1.1-MILESTONE-AUDIT.md (moved to milestones/)

Updated:
- MILESTONES.md (v1.1 entry added)
- PROJECT.md (v1.1 requirements → Validated section)
- STATE.md (reset for next milestone)
- ROADMAP.md (v1.1 collapsed to one-line summary)

Tagged: v1.1

--- a/.planning/milestones/v1.1-ROADMAP.md
+++ b/.planning/milestones/v1.1-ROADMAP.md
@@ -1,59 +1,21 @@
-# Roadmap: Telegram Bot VIP/Free - Sistema de Menus
+# Milestone v1.1: Sistema de Menús
 
-## Milestones
+**Status:** ✅ SHIPPED 2026-01-28
+**Phases:** 5-13
+**Total Plans:** 48
 
-- ✅ **v1.0 LucienVoiceService** - Phases 1-4 (shipped 2026-01-24)
-- ✅ **v1.1 Sistema de Menús** - Phases 5-13 (shipped 2026-01-28)
-- 📋 **v1.2 Future Enhancements** - To be defined
+## Overview
+
+Sistema de menús contextuales según rol (Admin/VIP/Free) completamente integrado con LucienVoiceService, con gestión de contenido y notificaciones de interés.
 
 ## Phases
 
-<details>
-<summary>✅ v1.0 LucienVoiceService (Phases 1-4) - SHIPPED 2026-01-24</summary>
-[Archived - see .planning/milestones/v1-ROADMAP.md]
-</details>
-
-<details>
-<summary>✅ v1.1 Sistema de Menús (Phases 5-13) - SHIPPED 2026-01-28</summary>
-
-Role-based menu system (Admin/VIP/Free) with automatic role detection, content package management, interest notifications, user management, social media integration, VIP ritualized entry flow, and comprehensive documentation.
-
-**9 phases, 48 plans, 57 requirements satisfied (100%)**
-
-**Key features:**
-- RoleDetectionService (Admin > VIP > Free priority)
-- ContentService CRUD for content packages
-- InterestService with 5-minute deduplication
-- UserManagementService with audit logging
-- Free channel entry flow with social media keyboard
-- VIP 3-stage ritualized entry (confirmation → alignment → access)
-- Package detail view redesign
-- 5,777 lines of documentation
-
-**[Full details archived - see .planning/milestones/v1.1-ROADMAP.md]**
-
-</details>
-
----
-
-## 📋 v1.2 Future Enhancements (Not Started)
-
-**To be defined** - Run `/gsd:new-milestone` to plan v1.2 goals
-
-Potential areas to explore:
-- Analytics dashboard for admin insights
-- User onboarding improvements and tutorials
-- Advanced content features (scheduling, expiration, categories)
-- Performance optimizations and caching
-- Enhanced testing coverage
-
----
-
 ### Phase 5: Role Detection & Database Foundation
+
 **Goal**: Sistema detecta automáticamente rol del usuario (Admin/VIP/Free) con modelos de base de datos para contenido, intereses y cambios de rol.
 **Status**: ✅ Complete
 **Completed**: 2026-01-25
-**Plans**: 5 plans completed
+**Plans**: 6 plans completed
 
 Plans:
 - [x] 05-01-PLAN.md — Role detection service with automatic role calculation
@@ -63,7 +25,21 @@ Plans:
 - [x] 05-04-PLAN.md — MenuRouter and role-based menu routing
 - [x] 05-05-PLAN.md — RoleChangeService for audit logging (MENU-04)
 
+**Details:**
+
+**Requirements**: MENU-01, MENU-02, MENU-04, CONTENT-01, CONTENT-02, CONTENT-03, CONTENT-07
+**Success Criteria** (what must be TRUE):
+  1. Sistema detecta rol automáticamente: Admin > VIP > Free (prioridad)
+  2. Menú principal de usuario se adapta según rol detectado
+  3. Base de datos tiene modelos ContentPackage, UserInterest, UserRoleChangeLog
+  4. ContentService existe para CRUD de paquetes
+  5. MenuRouter enruta /menu según rol del usuario
+  6. Cambios de rol se registran en UserRoleChangeLog con razón y changed_by
+
+---
+
 ### Phase 6: VIP/Free User Menus
+
 **Goal**: Menús de usuario VIP y Free con información de suscripción, contenido Premium y botones "Me interesa" que notifican al admin.
 **Status**: ✅ Complete
 **Completed**: 2026-01-25
@@ -82,7 +58,10 @@ Plans:
 - [x] 06-03-PLAN.md — Free menu handlers with content browsing and VIP upgrade option
 - [x] 06-04-PLAN.md — Menu navigation with back buttons replacing hardcoded keyboards.py
 
+---
+
 ### Phase 7: Admin Menu with Content Management
+
 **Goal**: Menú admin con gestión completa de paquetes de contenido (crear, editar, desactivar) y navegación centralizada.
 **Depends on**: Phase 5
 **Requirements**: ADMIN-CONTENT-01, ADMIN-CONTENT-02, ADMIN-CONTENT-03, ADMIN-CONTENT-04, ADMIN-CONTENT-05, CONTENT-04, CONTENT-05, CONTENT-06, NAV-01, NAV-02, NAV-03
@@ -103,7 +82,10 @@ Plans:
 - [x] 07-03-PLAN.md — ContentPackageStates FSM state group for creation wizard
 - [x] 07-04-PLAN.md — Content CRUD operations (create wizard, edit prompts, toggle active/inactive)
 
+---
+
 ### Phase 8: Interest Notification System
+
 **Goal**: Botón "Me interesa" crea registro de interés y envía notificación privada al admin con información del usuario y paquete.
 **Depends on**: Phase 7
 **Requirements**: INTEREST-01, INTEREST-02, INTEREST-03, INTEREST-04, INTEREST-05, ADMIN-INT-01, ADMIN-INT-02, ADMIN-INT-03, ADMIN-INT-04, ADMIN-INT-05
@@ -123,7 +105,10 @@ Plans:
 - [x] 08-03-PLAN.md — AdminInterestMessages provider for interest UI
 - [x] 08-04-PLAN.md — Interest management handlers (list, view filters, mark attended)
 
+---
+
 ### Phase 9: User Management Features
+
 **Goal**: Admin puede gestionar usuarios (ver info, cambiar rol, bloquear, expulsar) con registro de auditoría.
 **Depends on**: Phase 8
 **Requirements**: ADMIN-USR-01, ADMIN-USR-02, ADMIN-USR-03, ADMIN-USR-04, ADMIN-USR-05, MENU-03
@@ -146,7 +131,10 @@ Plans:
 - [x] 09-05-PLAN.md — Fix Interests tab MissingGreenlet error (eager loading)
 - [x] 09-06-PLAN.md — Fix role change confirmation callback parsing
 
+---
+
 ### Phase 10: Free Channel Entry Flow
+
 **Goal**: Flujo de ingreso al canal Free con voz de Lucien, redes sociales de la creadora, tiempo de espera y aprobación automática.
 **Depends on**: Phase 6
 **Requirements**: FLOW-FREE-01, FLOW-FREE-02, FLOW-FREE-03, FLOW-FREE-04, FLOW-FREE-05, FLOW-FREE-06, VOICE-03, VOICE-04, VOICE-05
@@ -168,7 +156,10 @@ Plans:
 - [x] 10-04-PLAN.md — Approval Message - Send with Channel Link Button
 - [x] 10-05-PLAN.md — Database Migration - Auto-Create New Columns
 
+---
+
 ### Phase 11: Documentation
+
 **Goal**: Documentación exhaustiva del sistema de menús en código y archivos .md con guía de integración para agregar nuevas opciones.
 **Depends on**: Phase 10
 **Requirements**: DOCS-01, DOCS-02, DOCS-03, DOCS-04
@@ -187,7 +178,10 @@ Plans:
 - [x] 11-03-PLAN.md — Create INTEGRATION_GUIDE.md with step-by-step instructions for adding menu options (message provider creation, handler implementation, callback routing, testing)
 - [x] 11-04-PLAN.md — Create EXAMPLES.md with practical usage examples (admin menu, user menu with role detection, content management, testing, voice integration)
 
+---
+
 ### Phase 12: Rediseño de Menú de Paquetes con Vista de Detalles
+
 **Goal**: Rediseñar la interfaz de paquetes para mostrar información detallada (descripción, precio) antes de registrar interés, con botones individuales por paquete.
 **Depends on**: Phase 8
 **Status**: ✅ Complete
@@ -206,7 +200,10 @@ Plans:
 - [x] 12-03-PLAN.md — Implementar flujo post-interés con mensaje de confirmación personal y botón de contacto
 - [x] 12-04-PLAN.md — Completar navegación completa (regresar a listado, volver a menú principal)
 
+---
+
 ### Phase 13: VIP Ritualized Entry Flow
+
 **Goal**: Reemplazar el flujo actual de acceso VIP (entrega inmediata del enlace) por un proceso secuencial de 3 fases de admisión que aumente percepción de exclusividad, reduzca accesos impulsivos, y prepare psicológicamente al usuario para el tipo de contenido.
 **Depends on**: Phase 6
 **Status**: ✅ Complete
@@ -228,25 +225,52 @@ Plans:
 
 ---
 
-## Progress
+## Milestone Summary
 
-**Execution Order:**
-Phases execute in numeric order: 1 → 2 → 3 → 4 → 5 → 6 → 7 → 8 → 9 → 10 → 11 → 12 → 13
+**Decimal Phases:**
 
-| Phase | Milestone | Plans Complete | Status | Completed |
-|-------|-----------|----------------|--------|-----------|
-| 1. Service Foundation & Voice Rules | v1.0 | 3/3 | Complete | 2026-01-23 |
-| 2. Template Organization & Admin Migration | v1.0 | 3/3 | Complete | 2026-01-23 |
-| 3. User Flow Migration & Testing Strategy | v1.0 | 4/4 | Complete | 2026-01-24 |
-| 4. Advanced Voice Features | v1.0 | 4/4 | Complete | 2026-01-24 |
-| 5. Role Detection & Database Foundation | v1.1 | 6/6 | Complete | 2026-01-25 |
-| 6. VIP/Free User Menus | v1.1 | 4/4 | Complete | 2026-01-25 |
-| 7. Admin Menu with Content Management | v1.1 | 4/4 | Complete | 2026-01-26 |
-| 8. Interest Notification System | v1.1 | 4/4 | Complete | 2026-01-26 |
-| 9. User Management Features | v1.1 | 6/6 | Complete | 2026-01-26 |
-| 10. Free Channel Entry Flow | v1.1 | 5/5 | Complete | 2026-01-27 |
-| 11. Documentation | v1.1 | 4/4 | Complete | 2026-01-28 |
-| 12. Rediseño de Menú de Paquetes | v1.1 | 4/4 | Complete | 2026-01-27 |
-| 13. VIP Ritualized Entry Flow | v1.1 | 4/4 | Complete | 2026-01-27 |
+None (all phases are whole numbers)
 
-**v1.1 Progress:** ██████████ 100% (48/48 plans complete, 57/57 requirements satisfied)
+**Key Decisions:**
+
+- Role detection is stateless (no caching) - always recalculates from fresh sources
+- Priority order: Admin > VIP > Free (first match wins)
+- Numeric(10,2) instead of Float for price field (currency precision requirement)
+- Content packages use 'name' field (not 'title')
+- Graceful fallback with try/except ImportError for vip/free handlers
+- VIP and Free callback routers registered globally for menu interactions
+- In-memory pagination with Paginator utility (10 items/page for content, 20 for users)
+- ContentPackageStates follows PricingSetupStates pattern for consistency
+- 5-minute debounce window for interest notifications
+- Admin notification via Config.ADMIN_USER_IDS from environment variable
+- Social media fields are nullable Optional[str] with String(200) for handles/URLs
+- ChatJoinRequest is the ONLY entry point for Free flow
+- VIP entry flow uses plain text (no HTML formatting) for dramatic narrative
+- vip_entry_stage default value set to 1 - new subscribers automatically start at stage 1
+- Token generation uses secrets.token_urlsafe(48) for 64-character tokens
+
+**Issues Resolved:**
+
+- Enum format mismatch: Fixed ContentCategory, PackageType, UserRole, RoleChangeReason enums to use uppercase values
+- Interest notification NoneType error: Fixed InterestService.register_interest() to use eager loading (selectinload) for package relationship
+- MissingGreenlet error: Applied eager loading with selectinload() to all InterestService queries
+- Role change confirmation callback parsing: Fixed incorrect index checking that caused "ID is invalid" error
+- RoleDetectionMiddleware registration: Fixed middleware registration on both dispatcher.update and dispatcher.callback_query
+
+**Issues Deferred:**
+
+None
+
+**Technical Debt Incurred:**
+
+- User blocking feature requires DB migration for User.is_blocked field (placeholder UI implemented)
+- Some duplicate notification functions in VIP and Free handlers (future refactoring candidate)
+- Hardcoded paths in some workflows (noted for future Phase cleanup)
+
+---
+
+_For current project status, see .planning/ROADMAP.md_
+
+---
+
+*Archived: 2026-01-28 as part of v1.1 milestone completion*
